# mona

./: README.md  lisa.toml  main.py  pyproject.toml
mona/: cli.py  config.py  sync.py
mona/templates/: example.toml
